--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,13 +1,22 @@
 $f-n_400: "Nunito-Regular", sans-serif;
 $f-n_700: "Nunito-Bold", sans-serif;
+$f-n_800: "Nunito-ExtraBold", sans-serif;
 
 
 @font-face {
+  
   font-family: "Nunito-Black";
   src: local("Nunito-Black");
   src: url("../fonts/Nunito-Black.ttf") format("ttf");
 }
 @font-face {
+  font-weight: 800;
+  font-family: "Nunito-ExtraBold";
+  src: local("Nunito-ExtraBold");
+  src: url("../fonts/Nunito-ExtraBold.ttf") format("ttf");
+}
+@font-face {
+  font-weight: 700;
   font-family: "Nunito-Bold";
   src: local("Nunito-Bold");
   src: url("../fonts/Nunito-Bold.ttf") format("ttf");
@@ -31,6 +40,7 @@ $f-n_700: "Nunito-Bold", sans-serif;
   src: url("../fonts/Nunito-Italic.ttf") format("ttf");
 }
 @font-face {
+  font-weight: 400;
   font-family: "Nunito-Regular";
   src: local("Nunito-Regular");
   src: url("../fonts/Nunito-Regular.ttf") format("ttf");
