--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  display: flex;
+  display:none;
   display: none;
   justify-content: center;
   align-items: center;
