--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,7 +1,7 @@
 $f-n_400: "Nunito-Regular", sans-serif;
 $f-n_700: "Nunito-Bold", sans-serif;
 $f-n_800: "Nunito-ExtraBold", sans-serif;
-
+$f-n_900: "Nunito-Black", sans-serif;
 
 @font-face {
   
