--- a/scss/base/main.scss
+++ b/scss/base/main.scss
@@ -16,6 +16,7 @@
 @import "../components/_users";
 @import "../components/_overview";
 @import "../components/_sense";
+@import "../components/_tariff";
 
 
 @import "../pages_scss/page.scss";
