--- a/css/page.css
+++ b/css/page.css
@@ -29,9 +29,32 @@ h2 {
   font-weight: 700;
 }
 
+.hidden {
+  display: none;
+}
+
+@media (max-width: 991px) {
+  h1 {
+    font-size: rem-calc(36);
+    line-height: rem-calc(42);
+  }
+  h2 {
+    font-size: rem-calc(26);
+    line-height: rem-calc(30);
+  }
+}
+
 @media (max-width: 767px) {
   .container {
     width: calc(100% - 30px);
     margin: 0 auto;
+  }
+  h1 {
+    font-size: rem-calc(22);
+    line-height: rem-calc(33);
+  }
+  h2 {
+    font-size: rem-calc(22);
+    line-height: rem-calc(36);
   }
 }
